# terraguard

./: LICENSE  README.md
terraguard/: Cargo.toml  achieved.txt  db.json  ec2_instance-i-789012.json  mapping.json  ms.json  run.txt  security_group-sg-123456.json  test.rs
terraguard/resources/: mapping.json  resource_mapping.json
terraguard/src/: main.rs  monitor.rs  monitor_cli.rs  parser.rs  plan.json  report.rs  rules.rs  types.rs
